--- a/PI-Countries-main/client/src/Styles/nav.module.css
+++ b/PI-Countries-main/client/src/Styles/nav.module.css
@@ -55,7 +55,7 @@
   }
   
   .topnav button{
-    background-color: #f4511e;
+    background-color: #361a13;
     border: none;
     color: white;
     padding: 16px 32px;
