--- a/PI-Countries-main/client/src/Styles/Detail.module.css
+++ b/PI-Countries-main/client/src/Styles/Detail.module.css
@@ -9,8 +9,8 @@ body {
     
     top: 50%;
     left: 50%;
-    width: 200px;
-    height: 300px;
+    width: 100px;
+    height: 150px;
     margin-left: 40px;
     float: left;
     perspective: 500px;
@@ -35,7 +35,7 @@ body {
   
   .card:hover .content {
     transform: rotateY( 180deg ) ;
-    transition: transform 0.5s;
+    transition: transform 0.3s;
   }
   
   .front,
@@ -44,17 +44,17 @@ body {
     height: 100%;
     width: 100%;
    background-image: url("../imgs/travel2.jpg");
-    line-height: 100px;
-    color: #03446A;
+    /* line-height: 100px; */
+    color: #38444b;
     text-align: center;
-    font-size: 20px;
-    border-radius: 5px;
+    font-size: 19px;
+    border-radius: 100px;
     /* backface-visibility: hidden; */
   }
   
   .back {
-    background: #f4511e;
-    color: white;
+    background: #361a13;
+    color: rgb(109, 222, 135);
     transform: rotateY( 180deg );
   }
  
@@ -69,6 +69,11 @@ body {
 
   .card img{
     margin-top: 10%
+    padding 1rem;
+    width: 40px;
+    height: 20px;
+
+
   }
 
   .card h4{
