--- a/PI-Countries-main/client/src/Styles/Info.mudule.css
+++ b/PI-Countries-main/client/src/Styles/Info.mudule.css
@@ -17,8 +17,8 @@
 
   .card img{
 
-    /* width: fit-content;
-    height: fit-content; */
+    width: fit-content;
+    height: fit-content;
     margin-top: 1%;
   }
 
